# dev-gl

./: LICENSE  dev-gl.py  readme.md
.github/workflows/: build_apps.yml  c-cpp.yml  greetings.yml
advanced_app/src/: advanced_app.c  meson.build
app/src/: meson.build
colorful_triangle/src/: colorful_triangle.c  meson.build
evaluator_test/src/: meson.build
src/: app.c  colorful_triangle.c
